k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels: 
        component: postgres
    spec:
      volumes:
      - name: postgres-storage # identical
        persistentVolumeClaim: 
          claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres:9.6.7
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # identical
              mountPath: /var/lib/postgresql/data # default postgres storage location 
              subPath: postgres # save data to sub directory within persistent volume (specific postgres requirement)
