k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: web
  ports: 
    - port: 3000 # exposed port other services can use to access service
      targetPort: 3000 # port on the target pod the Service is providing access too
