k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: postgres
  ports: 
    - port: 5432 # exposed port other services can use to access service
      targetPort: 5432 # port on the target pod the Service is providing access too
