k8s/redis-cluster-id-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: redis
  ports: 
    - port: 6379 # exposed port other services can use to access service
      targetPort: 6379 # port on the target pod the Service is providing access too
