k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: server
  ports: 
    - port: 5000 # exposed port other services can use to access service
      targetPort: 5000 # port on the target pod the Service is providing access too
