k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # create an ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # issuer.yaml
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - kubernetes.joepk.co.uk
        - www.kubernetes.joepk.co.uk
      secretName: kubernetes-joepk-co-uk # see certificate.yaml file
  rules:
    - host: kubernetes.joepk.co.uk
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service # see client-cluster-ip-service.yaml
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service # see server-cluster-ip-service.yaml
                port:
                  number: 5000
    - host: www.kubernetes.joepk.co.uk
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service # see client-cluster-ip-service.yaml
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service # see server-cluster-ip-service.yaml
                port:
                  number: 5000
# changes to apiVersion requirements
# https://stackoverflow.com/questions/66236346/kubernetes-apiversion-networking-k8s-io-v1-issue-with-ingress
